# Automated-Warehouse-Simulation

./: .gitignore  CMakeLists.txt  Core.h  Display.h  README.md  SDL3.h  disable_dpi.manifest  icon.icns  info.plist  info.plist.in  main.cpp  main.h  task_list.csv
Core/inc/: dataclass.h  misc.h  simulate.h
Core/src/: dataclass.cpp  misc.cpp  simulate.cpp
Display/inc/: button.h  car_info.h  color.h  dragbar.h  draw.h  framework.h  iconfont.h  launch.h  main_page.h  misc.h  resource.h
Display/src/: button.cpp  car_info.cpp  dragbar.cpp  draw.cpp  framework.cpp  launch.cpp  main_page.cpp  misc.cpp  resource.cpp
